# portable-storage

./: Cargo.toml  README.md
.github/workflows/: rust.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: de.rs
src/: de.rs  header.rs  lib.rs  raw_size.rs  ser.rs
tests/: fuzz_found_bugs.rs
utils/: Cargo.toml
utils/src/: blob.rs  bytes_uuid.rs  lib.rs
