[package]
name = "portable-storage"
version = "0.1.0"
authors = ["Jean Pierre Dudey <jeandudey@hotmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
include = ["LICENSE-APACHE", "LICENSE-MIT"]

[workspace]
members = ["utils"]

[dependencies]
bytes = "0.4"
failure = "0.1"
failure_derive = "0.1"
linked-hash-map = "0.5"
serde = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
