[package]
name = "portable-storage"
version = "0.1.0"
authors = ["Jean Pierre Dudey <jeandudey@hotmail.com>"]
license = "Apache-2.0"
include = ["LICENSE"]
edition = "2018"

[workspace]
members = ["utils"]

[dependencies]
bytes = "0.6"
thiserror = "1"
linked-hash-map = "0.5"
serde = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
