[package]
name = "portable-storage-utils"
version = "0.1.0"
authors = ["Jean Pierre Dudey <jeandudey@hotmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
include = ["LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
bytes = "0.4.6"
failure = "0.1.1"
failure_derive = "0.1.1"
serde = "1"
uuid = "0.5.1"
